Added DirectoryIndex. Options, AddHandler, rewrite rule now protects config backup files.

--- a/contrib/simple-install/.htaccess
+++ b/contrib/simple-install/.htaccess
@@ -1,3 +1,7 @@
+DirectoryIndex wiki.pl
+Options ExecCGI SymLinksIfOwnerMatch
+AddHandler cgi-script .pl
+
 <IfModule mod_rewrite.c>
   RewriteEngine on
   RewriteCond %{REQUEST_FILENAME} !-f
@@ -5,8 +9,9 @@
   RewriteCond %{REQUEST_URI} !=/favicon.ico
   RewriteRule ^(.*)$ wiki.pl?$1 [L,QSA]
 
-  # The config file might contain passwords.
-  RewriteRule ^config$ wiki.pl/config [L]
+  # The config file might contain passwords. Also protect possible
+  # backup filenames.
+  RewriteRule ^config(\~|\.bak)?$ wiki.pl/config [L]
   # The visitor.log file contains IP numbers of visitors.
   RewriteRule ^visitors.log$ wiki.pl/visitor.log [L]
 </IfModule>
