Fixed tar command.

--- a/contrib/simple-install/Makefile
+++ b/contrib/simple-install/Makefile
@@ -2,7 +2,7 @@ all:
 	@echo Please invoke make dist on the top level
 
 %-simple.tar.gz: README config wiki.pl .htaccess current.pl FDL GPL
-	tar czf $@ $<
+	tar czf $@ $^
 
 current.pl: ../../wiki.pl
 	cp $^ $@
